@@ -393,7 +393,6 @@ AC_ARG_ENABLE(locking,
 AC_ARG_ENABLE(redhat,
 	[  --enable-redhat         obsoleted ],[
 	echo "ERROR: --enable-redhat is obsoleted. Use --enable-redhat-sysv or --enable-redhat-systemd."
-	echo "exit 1"
 	exit 1
 	]
 )
@@ -417,11 +416,27 @@ AC_ARG_ENABLE(redhat-systemd,
 )
 
 AC_ARG_ENABLE(suse,
-	[  --enable-suse           use suse-style sysv configuration ],[
+	[  --enable-suse           obsoleted ],[
+	echo "ERROR: --enable-suse is obsoleted. Use --enable-suse-sysv or --enable-suse-systemd."
+	exit 1
+	]
+)
+
+AC_ARG_ENABLE(suse-sysv,
+	[  --enable-suse-sysv      use suse-style sysv configuration ],[
 	if test "$enableval" = "yes"; then
-		sysv_style=suse
+		sysv_style=suse-sysv
 	fi
 	AC_MSG_RESULT([enabling suse-style sysv support])
+	]
+)
+
+AC_ARG_ENABLE(suse-systemd,
+	[  --enable-suse-systemd   use suse-style systemd (>=openSUSE12.1) configuration ],[
+	if test "$enableval" = "yes"; then
+		sysv_style=suse-systemd
+	fi
+	AC_MSG_RESULT([enabling suse-style systemd support])
 	]
 )
 
@@ -448,6 +463,15 @@ AC_ARG_ENABLE(debian,
 		sysv_style=debian
 	fi
 	AC_MSG_RESULT([enabling debian-style sysv support])
+	]
+)
+
+AC_ARG_ENABLE(systemd,
+	[  --enable-systemd        use general systemd configuration],[
+	if test "$enableval" = "yes"; then
+		sysv_style=systemd
+	fi
+	AC_MSG_RESULT([enabling general systemd support])
 	]
 )
 
@@ -1274,13 +1298,13 @@ AM_CONDITIONAL(USE_PGP, test x$compile_pgp = xyes)
 AM_CONDITIONAL(DEFAULT_HOOK, test x$neta_cv_have_libgcrypt != xyes && test x$neta_cv_have_openssl != xyes)
 AM_CONDITIONAL(USE_NETBSD, test x$sysv_style = xnetbsd)
 AM_CONDITIONAL(USE_REDHAT_SYSV, test x$sysv_style = xredhat-sysv)
-AM_CONDITIONAL(USE_REDHAT_SYSTEMD, test x$sysv_style = xredhat-systemd)
-AM_CONDITIONAL(USE_SUSE, test x$sysv_style = xsuse)
+AM_CONDITIONAL(USE_SUSE_SYSV, test x$sysv_style = xsuse-sysv)
 AM_CONDITIONAL(USE_SHADOWPW, test x$shadowpw = xyes)
 AM_CONDITIONAL(USE_TRU64, test x$sysv_style = xtru64)
 AM_CONDITIONAL(USE_SOLARIS, test x$sysv_style = xsolaris)
 AM_CONDITIONAL(USE_GENTOO, test x$sysv_style = xgentoo)
 AM_CONDITIONAL(USE_DEBIAN, test x$sysv_style = xdebian)
+AM_CONDITIONAL(USE_SYSTEMD, test x$sysv_style = xsystemd || test x$sysv_style = xredhat-systemd || test x$sysv_style = xsuse-systemd)
 AM_CONDITIONAL(USE_UNDEF, test x$sysv_style = x)
 AM_CONDITIONAL(USE_BDB, test x$bdb_required = xyes)
 AM_CONDITIONAL(USE_APPLETALK, test x$netatalk_cv_ddp_enabled = xyes)
